# sins2-dataminer

./: .gitignore  cli.py  main.py  pyproject.toml  scanner.py
models/: ability.py  buff.py  cost.py  effect.py  entity.py  entity_reference.py  faction.py  modifier.py  prerequisite.py  requirement.py  research.py  stat.py
parser/: entity_parser.py  localization_parser.py  model_builder.py  parser_core.py  tokenizer.py
src/main/java/org/dshaver/sins/domain/export/: WikiPlanetItem.java  WikiStructure.java  WikiUnit.java  WikiWeapon.java
src/main/java/org/dshaver/sins/domain/ingest/unit/: AdditiveValues.java  Antimatter.java  Carrier.java  Health.java  Level.java  Level2.java  Physics.java  ScalarValues.java  ShieldBurstRestore.java  Strikecraft.java  Unit.java  UnitModifiers.java  UnitType.java  Weapon.java  WeaponFile.java  WeaponModifiers.java
src/main/java/org/dshaver/sins/domain/ingest/unititem/: PlanetModifier.java
src/main/java/org/dshaver/sins/service/: FileTools.java  UnitService.java
tests/: test_entity_parser.py  test_model_builder.py  test_parser_core.py  test_tokenizer.py
util/: file_utils.py
writers/: json_writer.py
