[tool.poetry]
name = "sins2-dataminer"
version = "0.1.0"
description = "Python rewrite of the Sins2 dataminer"
authors = ["Eric"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
